--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">DoogulShooter</string>
+    <string name="title_activity_ds">DSActivity</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="hello_world">Hello World</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
+    <string name="pause">Pause</string>
+    <string name="resume">Resume</string>
 </resources>
