--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="app_name">DoogulShooter</string>
-    <string name="title_activity_ds">DSActivity</string>
+    <string name="title_activity_main">DSActivity</string>
     <string name="action_settings">Settings</string>
 
-    <string name="hello_world">Hello World</string>
+    <string name="hello_world">Hello World!</string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
     <string name="pause">Pause</string>
     <string name="resume">Resume</string>
+    <string name="game_title">DoogulShooter - Space Shooter</string>
 </resources>
