Finished chapter 1 by getting the mainMenuFragment up and working. Also the book messed up the star/stop button so I had to learn how to add log messages so that i could figure out that I had turned off the listener for the view on th start/stop button.
Also the book was a bit vauge about where to put the onStart() method. At first it seemed like the book wanted it in MainMenuFragment, but that didn't make sense so I updated the version in DSActivity and that worked.

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="stop">Stop</string>
     <string name="pause">Pause</string>
     <string name="resume">Resume</string>
+    <string name="pause_dialog_title">Pause Dialog Title</string>
+    <string name="pause_dialog_message">Pause Dialog message</string>
     <string name="game_title">DoogulShooter - Space Shooter</string>
 </resources>
