--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">DoogulShooter</string>
-    <string name="title_activity_ds">DSActivity</string>
+    <string name="title_activity_ds">DoogulShooter</string>
     <string name="action_settings">Settings</string>
 
     <string name="hello_world">Hello World!</string>
